--- a/css/tarot.css
+++ b/css/tarot.css
@@ -1,9 +1,35 @@
+:root{
+    --carta_h: 300px;
+    --carta_w: 175px;
+    --carta_padding: calc(var(--carta_h)/30);
+    --carta_rad: calc(var(--carta_h)/30);
+}
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: rgb(109, 124, 109);   
+           
+}
+
+#tapete{
+    
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;       
+}
+
 .carta{
-    height: 600px;
-    width: 350px;
+    height: var(--carta_h);
+    width:var(--carta_w);
     border: 2px solid black;
-    border-radius: 20px;
-    padding: 15px;
+    border-radius: var(--carta_rad);
+    padding: var(--carta_padding);
     background-color: white;
     box-shadow: 0px 2px 2px rgba(182, 34, 34, 0.2);
     position: absolute;
@@ -11,15 +37,31 @@
     left: 0px;
 }
 
-.reverso{
-    background: url(reverso) repeat;
+.augurio, #zonaMazo{
+    height: var(--carta_h);
+    width:var(--carta_w);
+    border: 2px dotted white;
+    margin: 15px;
+    position: relative;
 }
 
-.anverso{
+.lectura{
+    width: 33vw;
+    padding: 10px;
+}
+
+.augurio div{
+    z-index: -1;    
+}
+
+.anverso, .reverso{
     height: 100%;
     width: 100%;
-    object-fit: fill;
-    
+    object-fit: fill;    
+}
+
+.desconocida img{
+    content: url(../img/back.png);
 }
 
 .girada{
@@ -27,8 +69,6 @@
 }
 
 .mazo{
-    position: fixed;
-    top:100px;
-    left:800px;
-    display: flex;
+    position: absolute;
 }
+
