--- a/css/tarot.css
+++ b/css/tarot.css
@@ -59,10 +59,11 @@ h1, h2, h3, h6{
     top: 0px;
     left: 185px;
     
-    width: calc(var(--carta_w)*3);
+    min-width: var(--carta_w);
+    max-width: 625px;
     opacity: 0;
     transition: .5s ease;
-    background-color: brown;
+    background-color: rgba(165, 42, 42,0.2);
     
 
     display: flex;
@@ -72,18 +73,32 @@ h1, h2, h3, h6{
     padding: 20px;
 
     border: 1px solid lightgray;
-    border-radius: 5px;
+    border-radius: 10px;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 .lectura h6{
     font-style: italic;
 }
 
-.lectura p{
-    max-width: calc(var(--carta_w)*2);
+.lectura h6::first-letter{
+    text-transform: uppercase;
 }
 
-.augurio:hover .lectura{
+.lectura ul{
+    margin-left: 12px;
+}
+
+.filigrana{
+    color: white;
+    font-size: large;
+}
+
+/*.lectura p{
+    max-width: calc(var(--carta_w)*2);
+}*/
+
+.poblado:hover .lectura{
     opacity: 1;
     transition-delay: .3s;
   }
